external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_struct.ide.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/ide_mode/missing_match_struct.move:2:3
  │
1 │ #[allow(ide_path_autocomplete)]
  │   ----- Attribute previously given here
2 │ #[allow(ide_dot_autocomplete)]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'allow' attached to the same item

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_struct.move:8:16
  │
8 │         match (s) {
  │                ^ Pattern '_' not covered

note[I15004]: IDE missing match arms
  ┌─ tests/move_2024/ide_mode/missing_match_struct.move:8:19
  │  
8 │           match (s) {
  │ ╭───────────────────^
9 │ │         }
  │ ╰─────────^ Missing arms: '0x42::m::S { x , y }'

error[E04016]: too few arguments
   ┌─ tests/move_2024/ide_mode/missing_match_struct.move:14:13
   │
14 │             S { } => 0
   │             ^^^^^ Missing pattern for field 'x' in '0x42::m::S'

error[E04016]: too few arguments
   ┌─ tests/move_2024/ide_mode/missing_match_struct.move:14:13
   │
14 │             S { } => 0
   │             ^^^^^ Missing pattern for field 'y' in '0x42::m::S'

